--- a/assets/css/leadmark.css
+++ b/assets/css/leadmark.css
@@ -4826,6 +4826,7 @@ input[type="button"].btn-block {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
+    margin-top:3%;
 }
 
 .navbar-toggler {
